--- a/PMgo/loginWindow.xaml
+++ b/PMgo/loginWindow.xaml
@@ -30,7 +30,7 @@
         </TextBox>
         <Label Content="Username" HorizontalAlignment="Left" Margin="227,227,0,0" VerticalAlignment="Top" Height="53" Width="170" FontSize="36" FontFamily="Segoe UI Light"/>
         <Label Content="Password" HorizontalAlignment="Left" Margin="238,309,0,0" VerticalAlignment="Top" Height="53" Width="159" FontSize="36" FontFamily="Segoe UI Light"/>
-        <Button Content="Login" HorizontalAlignment="Left" Margin="476,424,0,0" VerticalAlignment="Top" Width="183" Height="87" FontSize="30" Click="Button_Click_1" FontFamily="Segoe UI Light" Cursor="Arrow">
+        <Button Content="Login" HorizontalAlignment="Left" Margin="480,428,0,0" VerticalAlignment="Top" Width="183" Height="87" FontSize="30" Click="Button_Click_1" FontFamily="Segoe UI Light" Cursor="Arrow">
             <Button.Effect>
                 <DropShadowEffect/>
             </Button.Effect>
@@ -48,6 +48,7 @@
                 <DropShadowEffect BlurRadius="7" Color="#FFF5EBEB"/>
             </Label.Effect>
         </Label>
+        <Button Content="Forget Password?" HorizontalAlignment="Left" Height="38" Margin="743,324,0,0" VerticalAlignment="Top" Width="138" FontSize="14" Foreground="#FF2E4195" Click="Button_Click_2"/>
 
     </Grid>
 </Window>
