Added edit Project

--- a/PMgo/MainView.xaml
+++ b/PMgo/MainView.xaml
@@ -5,18 +5,20 @@
     <Grid>
         <Button x:Name="manageMembersButton" Content="Manage Members" Margin="806,224,0,0" Width="172" Click="Button_Click_2" Height="43" VerticalAlignment="Top" HorizontalAlignment="Left" Padding="0" FontSize="18"/>
         <Button Content="Manage Items" Margin="806,272,0,0" Width="172" Click="Button_Click_4" Height="43" VerticalAlignment="Top" HorizontalAlignment="Left" Padding="0" FontSize="18"/>
-        <TreeView x:Name="ProjectTreeView" HorizontalAlignment="Left" Height="290" Margin="190,222,0,0" VerticalAlignment="Top" Width="541" FontSize="14">
+        <TreeView x:Name="ProjectTreeView" HorizontalAlignment="Left" Height="290" Margin="190,209,0,0" VerticalAlignment="Top" Width="541" FontSize="14">
             <TreeView.Effect>
                 <DropShadowEffect/>
             </TreeView.Effect>
         </TreeView>
-        <Button x:Name="Refresh" Content="Refresh" Margin="806,320,0,0" Width="172" Click="Refresh_Click" Height="43" VerticalAlignment="Top" HorizontalAlignment="Left" Padding="0" FontSize="18"/>
+        <Button x:Name="Refresh" Content="Refresh" Margin="486,517,0,0" Width="172" Click="Refresh_Click" Height="45" VerticalAlignment="Top" HorizontalAlignment="Left" Padding="0" FontSize="18"/>
         <TextBlock x:Name="projectNameField" HorizontalAlignment="Left" Margin="225,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="59" Width="474" FontSize="36" TextAlignment="Center"/>
         <ProgressBar x:Name="projectProgress" HorizontalAlignment="Left" Height="62" Margin="190,127,0,0" VerticalAlignment="Top" Width="541"/>
         <TextBlock x:Name="progressBar_txt" HorizontalAlignment="Left" Height="62" Margin="408,127,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="92" TextAlignment="Center" FontSize="18" FontFamily="Segoe UI Light"/>
         <TextBlock x:Name="current_txt" HorizontalAlignment="Left" Height="54" Margin="193,4,0,0" TextWrapping="Wrap" TextAlignment="Center" VerticalAlignment="Top" Width="538" FontSize="24"/>
-        <Button Content="Cancel" HorizontalAlignment="Left" Height="46" Margin="806,466,0,0" VerticalAlignment="Top" Width="172" FontSize="18" Click="Button_Click_5"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" Height="46" Margin="261,516,0,0" VerticalAlignment="Top" Width="172" FontSize="18" Click="Button_Click_5"/>
         <Button x:Name="cancelProjectButton" Content="Cancel Project" HorizontalAlignment="Left" Height="48" Margin="806,368,0,0" VerticalAlignment="Top" Width="172" FontSize="18" Click="Button_Click_6"/>
+        <Button x:Name="IMusers" Content="Message System" HorizontalAlignment="Left" Height="50" Margin="930,522,0,0" VerticalAlignment="Top" Width="202" Click="IMusers_Click"/>
+        <Button Content="Edit Project" HorizontalAlignment="Left" Height="45" Margin="806,318,0,0" VerticalAlignment="Top" Width="172" FontSize="20" Click="Button_Click_7"/>
 
     </Grid>
 </Window>
